[gd_scene load_steps=4 format=3 uid="uid://bg6pehloro3st"]

[ext_resource type="Script" uid="uid://5cxq7hgghe8t" path="res://scenes/friend.gd" id="1_ltv6v"]
[ext_resource type="Texture2D" uid="uid://di2jdhvokr04y" path="res://assets/sprite.png" id="1_ohny1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ltv6v"]
size = Vector2(157, 141)

[node name="Friend" type="Area2D"]
script = ExtResource("1_ltv6v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(50, 56)
texture = ExtResource("1_ohny1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(49.5, 58.5)
shape = SubResource("RectangleShape2D_ltv6v")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
